--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -357,7 +357,7 @@ main {
     text-align: center;
 }
 
-.contact  p{
+.contact p{
     letter-spacing: 2.5px;
     color: #FFFFFF;
 }
@@ -372,41 +372,67 @@ main {
     line-height: 1.5;
 }
 
-.email-input:focus:invalid {
-    border: 3px solid #FA5757;
-    background: url("../img/icon-error.svg") no-repeat 95% 50% #FFFFFF;
-    background-position: right;
-}
-
-.email-input:focus {
-    outline: none;    
-}
-
-
-
-.contact div{
+.buttonContainer{
     display: flex;
     flex-direction: column;
+    width: 100%;
+    
+    padding: 0px 0px;
     margin: 0 auto;
-    gap:20px;
+}
+
+.buttonContainer div{
+    margin-bottom: 20px;
+}
+
+.email-input{
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+    padding: 20px 20px;
+    margin: 0px auto;
+    font-size: 15px;
+    border: 3px solid transparent;
+    width: 90%;
+    max-width: 400px;
+}
+.email-input:invalid {
+    border: 2px solid #FA5757;
+    background: url("../img/icon-error.svg") no-repeat 95% 50% #FFFFFF;
+    background-position: right;
+    
+}
+
+.email-input:focus{
+    outline: none;
+}
+
+.messageFail{
+    height:20px;
+    background-color: #FA5757;
+    margin: 0 auto;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+    max-width: 400px;
+    width: 90%;
+    text-align: left;
+    padding-left: 20px;
+    /* visibility: hidden; */
+}
+
+.messageFail small{
+    color: #FFFFFF;
+    
 }
 
 .btn-contact{
     border-radius:5px;
-    padding: 21.5px 0px;
+    padding: 20px 0px;
     border: none;
     background-color: #FA5757;
     color: #FFFFFF;
-}
-
-.contact div input{
-    border-radius: 5px;
-    border: none;
-    padding: 18px 18px;
-    margin-bottom: 0px;
-    font-size: 15px;
-    color: #b8b9bc;
-    border: 3px solid transparent;
+    max-width: 400px;
+    width: 90%;
+    margin: 0 auto;
 }
 
 /* Footer */
@@ -728,24 +754,45 @@ footer div:first-child{
         width: 24%;
         margin: 0 auto;
         letter-spacing: 1.5px;
+        font-size: 24px;
+         border: 1px salmon solid;
     }
 
-    .contact div{
+    .buttonContainer{
         flex-direction: row;
         justify-content: center;
-        max-width: 1200px ;
+        max-width: 500px ;
+      
+        border: 1px salmon solid;
+    }
+
+    .buttonContainer div{
+        width: 70%;
+        min-width: 300px;
     }
 
     .btn-contact{
-        padding: 0px;
-        width: 10%; 
+        margin: 0px;
+        width: 100px;
+        padding: 0px 10px 0px 10px;
+        height: 40px;
        }
 
-    .contact div input{
-        padding: 10px;
-        max-width: 450px;
-       flex-grow: 1;
+    .email-input{
+        padding: 0px;
+        max-width: 300px;
+        min-width: 190px;
+        padding-left: 20px;
+        margin-right: 10px;
+        height: 40px;
     }
+
+    .messageFail{
+        max-width: 300px;
+        min-width: 190px;
+        margin-right: 30px;
+    }
+    
 
 /* Footer */
 
